# nostr-analytics

./: .env.docker  .env.prd  .gitignore  .pdm-python  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: main.yml
dbt/models/: schema.yml
infrastructure/: Dockerfile
infrastructure/terraform/: .terraform.lock.hcl  main.tf  variables.tf
orchestration/prefect/: etl_pipeline.py
src/: analytics.py  config.py  main.py  utils.py
src/base/: config.py  utils.py
src/bigquery/: sql.py
src/client/: bq.py  farcaster.py  nostr.py
src/deployment/: geolocation_data_import.py
src/kafka/: consumer.py  producer.py  schemas.py
src/models/: base.py  sql.py
src/models/bigquery/: schemas.py  utils.py
src/models/kafka/: base.py  consumer.py  producer.py  schemas.py
src/models/nostr/: event.py  message_pool.py  relay.py  relay_manager.py  request.py  subscription.py
src/nostr/: base.py  event.py  filter.py  message_pool.py  message_type.py  relay.py  relay_manager.py  request.py  subscription.py
src/services/: analytics.py  bq.py
terraform/: main-archived.tf  main.tf  variables-archived.tf  variables.tf
terraform/archive/: variables.ft
tests/analytics/: fixtures.py  test_relays.py
tests/bigquery/: fixtures.py  test_bq.py  test_sql.py
tests/biqquery/: fixtures.py  test_bq.py  test_sql.py
tests/integration/: test_nostr_kafka_bq.py  test_relay_discovery.py
tests/kafka/: fixtures.py  test_kafka.py
tests/nostr/: fixtures.py  test_nostr.py  test_nostr_network.py
transformation/dbt/: dbt_project.yml
transformation/dbt/models/: schema.yml
transformation/dbt/models/analytics/: event.sql  relay_location.sql
