[project]
name = ""
version = ""
description = ""
authors = [{name = "Victor Matekole", email = "github@matekole.com"},]
dependencies = [
    "python-dotenv>=1.0.1",
    "pysodium>=0.7.17",
    "websocket-client>=1.7.0",
    "pytest-watch>=4.2.0",
    "confluent-kafka>=2.3.0",
    "pydantic>=2.6.4",
    "dataclasses-avroschema>=0.57.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "rich>=13.7.1",
    "requests>=2.31.0",
    "fastavro>=1.9.4",
    "pytest-mock>=3.14.0",
]
[tool.black]
skip-string-normalization = true

[tool.pytest.ini_options]
pythonpath = ["./src"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(message)s"
