[project]
name = ""
version = ""
description = ""
authors = [{name = "Victor Matekole", email = "github@matekole.com"},]
dependencies = [
    "python-dotenv>=1.0.1",
    "websocket-client>=1.7.0",
    "confluent-kafka>=2.3.0",
    "pydantic>=2.6.4",
    "dataclasses-avroschema>=0.57.4",
    "google-cloud-bigquery>=3.19.0",
    "prefect>=2.14.13",
    "pydantic-settings>=2.2.1",
    "dbt-bigquery>=1.7.7",
    "sqlglot>=23.10.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "rich>=13.7.1",
    "requests>=2.31.0",
    "fastavro>=1.9.4",
    "pytest-mock>=3.14.0",
    "coverage>=7.4.4",
    "pytest-timeout>=2.3.1",
]
[tool.black]
skip-string-normalization = true

[tool.pytest.ini_options]
pythonpath = ["./src"]
log_cli = true

[tool.pdm]
